# ts2mp4

./: .flake8  .gitignore  AGENTS.md  Dockerfile.ci  GEMINI.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-release.yml  ci.yml
tests/: conftest.py  test_audio_integrity.py  test_audio_reencoder.py  test_audio_repair.py  test_cli.py  test_cli_version.py  test_command.py  test_e2e.py  test_ffmpeg.py  test_hashing.py  test_init.py  test_initial_converter.py  test_logging.py  test_media_info.py  test_quality_check.py  test_stream_integrity.py  test_ts2mp4.py  test_ts2mp4_logic.py  test_video_file.py
ts2mp4/: __init__.py  __main__.py  audio_integrity.py  audio_reencoder.py  audio_repair.py  cli.py  command.py  ffmpeg.py  hashing.py  initial_converter.py  media_info.py  quality_check.py  stream_integrity.py  ts2mp4.py  types.py  video_file.py
