[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = [".venv", "build", "dist"]

[tool.poetry]
name = "ts2mp4"
version = "2025.07.13.1"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
logzero = "^1.7.0"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.4.1"
pydocstyle = "^6.3.0"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
ts2mp4 = "ts2mp4.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
