[tool.mypy]
strict = true
exclude = [".venv", "build", "dist"]

[[tool.mypy.overrides]]
module = "logzero"
ignore_missing_imports = true

[tool.poetry]
name = "ts2mp4"
version = "2025.07.17.1"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
logzero = "^1.7.0"
pydantic = "^2.5.3"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.5.3"
mypy = "^1.4.1"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
ruff = "^0.5.5"

[tool.poetry.scripts]
ts2mp4 = "ts2mp4.cli:app"

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
    "e2e: mark a test as an end-to-end test.",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
